Adding WIP project

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
             <div class="flex justify-center md:justify-end">
                 <div class="pfp-wrap">
                     <div class="pfp-glow"></div>
-                    <img src="portrait.png" alt="Profile Photo" class="pfp-img">
+                    <img src="images/portrait.png" alt="Profile Photo" class="pfp-img">
                 </div>
             </div>
 
