fixing image paths

--- a/arthouse.html
+++ b/arthouse.html
@@ -44,8 +44,8 @@
                 </p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <img src="ss13.jpg" alt="Screenshot 1" class="w-full rounded">
-                <img src="ss14.jpg" alt="Screenshot 2" class="w-full rounded">
+                <img src="images/ss13.jpg" alt="Screenshot 1" class="w-full rounded">
+                <img src="images/ss14.jpg" alt="Screenshot 2" class="w-full rounded">
             </div>
         </section>
 
