--- a/trotrivia.html
+++ b/trotrivia.html
@@ -42,9 +42,9 @@
                 </p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                <img src="ss10.png" alt="Screenshot 1" class="w-full rounded">
-                <img src="ss11.png" alt="Screenshot 2" class="w-full rounded">
-                <img src="ss12.png" alt="Screenshot 3" class="w-full rounded">
+                <img src="images/ss10.png" alt="Screenshot 1" class="w-full rounded">
+                <img src="images/ss11.png" alt="Screenshot 2" class="w-full rounded">
+                <img src="images/ss12.png" alt="Screenshot 3" class="w-full rounded">
             </div>
         </section>
 
