--- a/summit.html
+++ b/summit.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jason Platte Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
 
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body class="bg-black text-white">
 
-    <header class="py-6 text-center relative shadow-lg"
-            style="background-color:#202123;">
+    <header class="py-6 text-center relative shadow-lg" style="background-color:#202123;">
         <h1 class="text-2xl font-extrabold tracking-wide text-white">Jason Platte</h1>
 
         <nav class="mt-3 flex justify-center space-x-8 text-2xl md:text-3xl text-gray-400">
@@ -21,66 +21,231 @@
             <a href="about.html" class="nav-link nav-glow">About</a>
         </nav>
 
-        <!-- gradient divider line -->
         <div class="h-px w-full mt-5"
              style="background: linear-gradient(90deg, transparent, rgba(52,211,153,0.55), rgba(34,211,238,0.45), transparent);">
         </div>
     </header>
 
-    <main class="max-w-5xl mx-auto p-8 space-y-8">
-        <h2 class="text-4xl font-bold text-center">Summit</h2>
+    <main class="max-w-5xl mx-auto px-6 md:px-10 py-10 space-y-10">
 
-        <section class="text-center text-gray-400 space-y-2">
-            <p>Engineer & Designer | Lua, Roblox Studio</p>
-        </section>
+        <!-- Title -->
+        <header class="text-center space-y-2">
+            <h2 class="text-4xl font-extrabold tracking-tight">Summit</h2>
+            <p class="text-gray-400">Engineer &amp; Designer | Lua, Roblox Studio</p>
+        </header>
 
-        <section>
-            <h3 class="text-2xl font-semibold mb-4">The Game</h3>
-            <div class="gap-10 mb-6">
-                <p>
-                    A climbing experience inspired by Peak (2025) and The Backrooms. Compatible with PC and mobile.
-                </p>
-            </div>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                    <iframe width="560" height="315" src="https://youtube.com/embed/SGGyyZv7TB4" frameborder="0" allowfullscreen></iframe>
+        <!-- The Game -->
+        <section class="space-y-4">
+            <h3 class="text-2xl font-semibold">The Game</h3>
+
+            <p class="text-gray-200 leading-relaxed">
+                A networked multiplayer climbing game built in Roblox Studio, featuring physics-based traversal,
+                item-driven progression, and cross-platform optimization for PC and mobile.
+            </p>
+
+            <!-- Responsive YouTube embed -->
+            <div class="rounded-xl overflow-hidden border border-gray-800 shadow-lg bg-black">
+                <div class="relative w-full" style="padding-top:56.25%;">
+                    <iframe class="absolute inset-0 w-full h-full"
+                            src="https://www.youtube.com/embed/SGGyyZv7TB4?rel=0&modestbranding=1"
+                            title="Summit gameplay"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen>
+                    </iframe>
                 </div>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-4 pt-2">
+                <div class="md:col-span-2 rounded-xl border border-gray-800 p-5 bg-[#0f1115]">
+                    <h4 class="text-lg font-semibold mb-2">Technical Focus</h4>
+                    <ul class="text-gray-300 space-y-2 list-disc list-inside">
+                        <li><span class="text-white font-semibold">Gameplay Systems:</span> climbing traversal, inventory/backpack, status effects</li>
+                        <li><span class="text-white font-semibold">Networking:</span> client/server scripting patterns for responsive multiplayer gameplay</li>
+                        <li><span class="text-white font-semibold">Progression:</span> class + currency systems and persistence concepts</li>
+                        <li><span class="text-white font-semibold">Iteration:</span> playtesting-driven tuning and bug fixing</li>
+                    </ul>
+                </div>
+
+                <div class="rounded-xl border border-gray-800 p-5 bg-[#0f1115]">
+                    <h4 class="text-lg font-semibold mb-2">Links</h4>
+                    <a href="https://www.roblox.com/games/107395692446817/Summit"
+                       target="_blank"
+                       rel="noopener noreferrer"
+                       class="inline-flex w-full items-center justify-center rounded-lg bg-blue-600 hover:bg-blue-500 px-4 py-3 font-semibold text-white transition shadow">
+                        Play on Roblox
+                    </a>
+                    <p class="text-xs text-gray-500 mt-3">
+                        Note: If you’re reviewing on mobile, Roblox may open in the app.
+                    </p>
+                </div>
+            </div>
         </section>
 
-        <section>
-            <h3 class="text-2xl font-semibold mb-4">My Contributions</h3>
-            <ul class="list-disc list-inside space-y-2 text-gray-300">
-                <li>Implemented core gameplay mechanics - Climbing, Item usage, Backpack, Status Effects</li>
-                <li>Designed class and currency system.</li>
-                <li>Enabled a multiplayer climbing experience by delivering responsive core systems through scripted movement, interactive UI, 
-                    and environment mechanics using Roblox Studio, Lua, and modular client/server patterns.</li>
-                <li>Kept development on track for Summer 25 by aligning scope and test coverage through sprint goals, playtest matrices, and 
-                    code reviews using GitHub issues/boards and PR workflows. </li>
-                <li>Published game available on Roblox for mobile and PC.</li>
-            </ul>
+        <!-- Contribution Gallery (Cards + GIF placeholders) -->
+        <section class="space-y-5">
+            <div class="flex items-baseline justify-between">
+                <h3 class="text-2xl font-semibold">Contribution Gallery</h3>
+            </div>
+
+            <!-- Card 1 -->
+            <article class="feature-card grid grid-cols-1 md:grid-cols-2 gap-5 p-5 rounded-xl border border-gray-800 bg-[#0f1115]">
+                <!-- GIF -->
+                <div class="media-frame media-16x9 rounded-lg overflow-hidden border border-gray-800 bg-black">
+                    <img src="gifs/summit-climbing.gif"
+                         alt="Climbing traversal and stamina lunge"
+                         class="w-full h-full object-cover" />
+                </div>
+
+                <!-- Text -->
+                <div class="space-y-3">
+
+                    <h4 class="text-lg font-semibold">
+                        Climbing Traversal &amp; Stamina-Based Lunge
+                    </h4>
+
+                    <p class="text-gray-300 leading-relaxed">
+                        Implemented a stamina-driven climbing system with a high-cost lunge move
+                        that trades endurance for speed, supporting risk–reward movement decisions.
+                    </p>
+                    <ul class="list-disc list-inside text-gray-400 space-y-1 text-sm">
+                        <li>Stamina drain + regeneration balancing</li>
+                        <li>Lunge speed vs. stamina cost tradeoff</li>
+                        <li>Wall detection and attachment logic</li>
+                        <li>Responsive traversal on PC and mobile</li>
+                    </ul>
+                    <div class="chip-row">
+                        <span class="chip">Gameplay Systems</span>
+                        <span class="chip">Traversal</span>
+                        <span class="chip">State Machines</span>
+                        <span class="chip">Cross-Platform</span>
+                    </div>
+                </div>
+            </article>
+
+
+            <!-- Card 2 -->
+            <article class="feature-card grid grid-cols-1 md:grid-cols-2 gap-5 p-5 rounded-xl border border-gray-800 bg-[#0f1115]">
+                <!-- GIF -->
+                <div class="media-frame media-16x9 rounded-lg overflow-hidden border border-gray-800 bg-black">
+                    <img src="gifs/summit-inventory.gif"
+                         alt="Inventory, backpack, and status effects"
+                         class="w-full h-full object-cover" />
+                </div>
+
+                <!-- Text -->
+                <div class="space-y-3">
+                    <h4 class="text-lg font-semibold">
+                        Inventory, Backpack, &amp; Status Effects
+                    </h4>
+
+                    <p class="text-gray-300 leading-relaxed">
+                        Built an inventory and backpack system with interactive UI and gameplay-driven status effects, focusing on reliable
+                        state updates so items, buffs/debuffs, and UI feedback stay consistent during moment-to-moment play.
+                    </p>
+
+                    <ul class="list-disc list-inside text-gray-400 space-y-1 text-sm">
+                        <li>Item pickup / equip / use flows tied to UI</li>
+                        <li>Status effects application and timing</li>
+                        <li>UI state updates for inventory + effects</li>
+                        <li>Bug fixing for edge cases and desync-prone states</li>
+                    </ul>
+
+                    <div class="chip-row">
+                        <span class="chip">UI Systems</span>
+                        <span class="chip">Game State</span>
+                        <span class="chip">Inventory</span>
+                        <span class="chip">Status Effects</span>
+                    </div>
+                </div>
+            </article>
+
+            <!-- Card 3 -->
+            <article class="feature-card grid grid-cols-1 md:grid-cols-2 gap-5 p-5 rounded-xl border border-gray-800 bg-[#0f1115]">
+                <!-- GIF -->
+                <div class="media-frame media-16x9 rounded-lg overflow-hidden border border-gray-800 bg-black">
+                    <img src="gifs/summit-multiplayer.gif"
+                         alt="Multiplayer synchronization and client/server gameplay"
+                         class="w-full h-full object-cover" />
+                </div>
+
+                <!-- Text -->
+                <div class="space-y-3">
+                    <h4 class="text-lg font-semibold">
+                        Multiplayer Synchronization
+                    </h4>
+
+                    <p class="text-gray-300 leading-relaxed">
+                        Implemented multiplayer gameplay logic using client/server scripting patterns so core interactions and movement feel
+                        responsive while remaining consistent across players in a shared session.
+                    </p>
+
+                    <ul class="list-disc list-inside text-gray-400 space-y-1 text-sm">
+                        <li>Client/server separation for gameplay responsibilities</li>
+                        <li>Replicated player actions and interaction state</li>
+                        <li>Focused debugging on inconsistent or out-of-sync behavior</li>
+                        <li>Validation testing with multiple players across devices</li>
+                    </ul>
+
+                    <div class="chip-row">
+                        <span class="chip">Networking</span>
+                        <span class="chip">Client/Server</span>
+                        <span class="chip">Replication</span>
+                        <span class="chip">Debugging</span>
+                    </div>
+                </div>
+            </article>
+
+            <!-- Card 4 -->
+            <article class="feature-card grid grid-cols-1 md:grid-cols-2 gap-5 p-5 rounded-xl border border-gray-800 bg-[#0f1115]">
+                <!-- GIF -->
+                <div class="media-frame media-16x9 rounded-lg overflow-hidden border border-gray-800 bg-black">
+                    <img src="gifs/summit-progression.gif"
+                         alt="Class and currency progression systems"
+                         class="w-full h-full object-cover" />
+                </div>
+
+                <!-- Text -->
+                <div class="space-y-3">
+                    <h4 class="text-lg font-semibold">
+                        Class &amp; Currency Progression
+                    </h4>
+
+                    <p class="text-gray-300 leading-relaxed">
+                        Designed and implemented class selection and currency-based progression systems to give players clear goals and a reason
+                        to keep climbing, iterating on pacing and clarity through playtests.
+                    </p>
+
+                    <ul class="list-disc list-inside text-gray-400 space-y-1 text-sm">
+                        <li>Class selection logic and UI states</li>
+                        <li>Currency earning/spending loops to support progression</li>
+                        <li>Progression pacing adjustments from playtest feedback</li>
+                        <li>Persistence concepts for saving player data over time</li>
+                    </ul>
+
+                    <div class="chip-row">
+                        <span class="chip">Progression Systems</span>
+                        <span class="chip">Economy Design</span>
+                        <span class="chip">Persistence</span>
+                        <span class="chip">UI Flow</span>
+                    </div>
+                </div>
+            </article>
         </section>
 
-        <a href="https://www.roblox.com/games/107395692446817/Summit" target="_blank" style="
-        display: inline-block;
-        background-color: #335fff;
-        color: #ffffff;
-        padding: 10px 20px;
-        text-align: center;
-        text-decoration: none;
-        font-weight: bold;
-        border-radius: 6px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        transition: background-color 0.2s;">
-            Play on Roblox
-        </a>
+        <section class="rounded-xl border border-gray-800 p-5 bg-[#0f1115] space-y-2">
+            <h3 class="text-2xl font-semibold">Technical Summary</h3>
+            <p class="text-gray-300 leading-relaxed">
+                Summit demonstrates end-to-end gameplay systems ownership in a networked environment, combining stamina-driven traversal,
+                UI-driven inventory and status effects, multiplayer synchronization, and progression systems within a shipped Roblox experience.
+            </p>
+        </section>
 
     </main>
 
-
-    <!-- Footer -->
     <footer class="text-center py-6 border-t border-gray-700 text-sm text-gray-500">
         &copy; 2026 Jason Platte. All rights reserved.
     </footer>
-
 
 </body>
 </html>
