Updating AH and adding gifs

--- a/summit.html
+++ b/summit.html
@@ -64,6 +64,7 @@
                         <li><span class="text-white font-semibold">Networking:</span> client/server scripting patterns for responsive multiplayer gameplay</li>
                         <li><span class="text-white font-semibold">Progression:</span> class + currency systems and persistence concepts</li>
                         <li><span class="text-white font-semibold">Iteration:</span> playtesting-driven tuning and bug fixing</li>
+                        <li><span class="text-white font-semibold">Tools:</span> Roblox Studio, Luau</li>
                     </ul>
                 </div>
 
@@ -72,8 +73,12 @@
                     <a href="https://www.roblox.com/games/107395692446817/Summit"
                        target="_blank"
                        rel="noopener noreferrer"
-                       class="inline-flex w-full items-center justify-center rounded-lg bg-blue-600 hover:bg-blue-500 px-4 py-3 font-semibold text-white transition shadow">
-                        Play on Roblox
+                       class="inline-flex w-full items-center justify-center gap-2 rounded-lg bg-[#1b2838] hover:bg-[#223446]
+                        px-4 py-3 font-semibold text-white transition shadow"
+                       aria-label="Open Art House on Steam">
+                        <!-- Steam icon (simple) -->
+                        <img src="icons/roblox.svg" alt="" class="w-20 h-20" />
+
                     </a>
                     <p class="text-xs text-gray-500 mt-3">
                         Note: If you’re reviewing on mobile, Roblox may open in the app.
@@ -239,6 +244,24 @@
                 Summit demonstrates end-to-end gameplay systems ownership in a networked environment, combining stamina-driven traversal,
                 UI-driven inventory and status effects, multiplayer synchronization, and progression systems within a shipped Roblox experience.
             </p>
+        </section>
+
+        <section class="space-y-4">
+            <h3 class="text-2xl font-semibold">My Contributions</h3>
+            <ul class="list-disc list-inside space-y-3 text-gray-300 leading-relaxed">
+                <li>
+                    Led end-to-end development of core gameplay systems including climbing traversal, stamina-based movement, inventory, and status effects in Roblox Studio using Lua.
+                </li>
+                <li>
+                    Designed and implemented class and currency progression systems, iterating on balance and clarity through regular playtests and player feedback.
+                </li>
+                <li>
+                    Built responsive client/server gameplay logic and UI interactions to ensure consistent behavior across PC and mobile platform.
+                </li>
+                <li>
+                    Owned integration, testing, and publishing of the project on Roblox, supporting ongoing iteration through bug fixes and gameplay tuning.
+                </li>
+            </ul>
         </section>
 
     </main>
